# ICT-RCA

./: .gitignore  README.md  api_schema.json  case_TPA2EG24_24_card_fault.html  case_template.md  convert_topology_to_json.py  pyproject.toml  requirements.txt  specifications.md  topology_anonymized.json  topology_anonymized.md
data/: api_schema.json  topology_anonymized.json
docs/: topology_anonymized_visualized.md  ut_report.md
examples/: case_TPA2EG24_24_card_fault.md  case_template.md  example_usage.py  testcase_template
scripts/: convert_topology_to_json.py
src/: __init__.py  topology_lookup.py
test/: __init__.py  test_topology_lookup.py
